# finance-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  FIXES_SUMMARY.md  README.md  config.env.example  finance_assistant_implementation_plan.md  packages.txt  pyproject.toml  railway.json  railway_start.py  requirements.txt  requirements_cloud.txt  rules.txt  run_docker.bat  run_streamlit.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: __init__.py
agents/analytics/: __init__.py  portfolio.py  service.py
agents/api/: service.py
agents/language/: __init__.py  gemini_client.py  service.py  workflow.py
agents/retriever/: __init__.py  document_loader.py  service.py  vector_store.py
agents/voice/: __init__.py  service.py  speech_processor.py
cache/api/: TIME_SERIES_DAILY_ADJUSTED_AAPL_outputsize_compact.json  TIME_SERIES_DAILY_ADJUSTED_MSFT_outputsize_compact.json
cache/vector_store/: finance_docs.faiss  finance_docs_metadata.json
data/: portfolio.csv
data_ingestion/: README.md  __init__.py  config.py
data_ingestion/api_agent/: __init__.py  alphavantage_client.py  demo_fallback.py  service.py
data_ingestion/scraper_agent/: __init__.py  sec_scraper.py  service.py
docker/: Dockerfile.api_agent  Dockerfile.base  Dockerfile.orchestrator  docker-compose.yml
docs/: architecture.md
finance_assistant/: .env.example  __init__.py
orchestrator/: main.py
tests/: test_analytics.py  test_ingestion.py  test_language.py  test_orchestrator.py  test_retriever.py  test_voice.py
(+1 files in other folders)
